force-app/main/default/objects/nDESIGN__Section_Configuration__c/nDESIGN__Section_Configuration__c.object-meta.xml
<CustomObject>
    <label>-D Section Configuration</label>
    <nameField>
        <displayFormat>SC-{000000000}</displayFormat>
        <label>Section Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Section Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>