force-app/main/default/objects/nDESIGN__Section_Configuration__c/fields/nDESIGN__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__lookupKey__c</fullName>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>