force-app/main/default/objects/nDESIGN__Section_Configuration__c/fields/nDESIGN__Parent_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Parent_Relationship_Name__c</fullName>
    <label>Parent Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>