force-app/main/default/objects/nDESIGN__Section_Configuration__c/fields/nDESIGN__Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Screen_Section__c</fullName>
    <label>Screen Section</label>
    <referenceTo>nDESIGN__Screen_Section__c</referenceTo>
    <relationshipLabel>Section Configurations</relationshipLabel>
    <relationshipName>Section_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>