force-app/main/default/objects/nDESIGN__Section_Configuration__c/fields/nDESIGN__Section_Resource_Class__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Section_Resource_Class__c</fullName>
    <description>Deprecated to Screen_Section__c.Section_Resource__c</description>
    <label>-D Section Resource Class</label>
    <length>1</length>
    <type>Text</type>
</CustomField>