force-app/main/default/objects/nDESIGN__Section_Configuration__c/fields/nDESIGN__sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__sObject_Type__c</fullName>
    <label>sObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>