force-app/main/default/objects/nDESIGN__Section_Configuration__c/validationRules/nDESIGN__Child_Display_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>nDESIGN__Child_Display_Order</fullName>
    <active>true</active>
    <description>Ensures children configurations are ordered after their parents.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( nDESIGN__Parent_Configuration__c ) ) , nDESIGN__Display_Order__c  &lt;=  nDESIGN__Parent_Configuration__r.nDESIGN__Display_Order__c )</errorConditionFormula>
    <errorMessage>Child configurations must follow their parents in display order.</errorMessage>
</ValidationRule>