force-app/main/default/objects/nDESIGN__Section_Configuration__c/listViews/nDESIGN__All.listView-meta.xml
<ListView>
    <fullName>nDESIGN__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>